Added request/response DTOs

--- a/Softt365Test.csproj
+++ b/Softt365Test.csproj
@@ -160,6 +160,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DTOs\CalculCreditRequestDto.cs" />
+    <Compile Include="Models\DTOs\CalculCreditResponseDto.cs" />
+    <Compile Include="Models\DTOs\LigneAmortissementDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -230,7 +233,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\bootstrap.min.js.map" />
